--- a/app/src/main/res/layout-w600dp/app_bar_main.xml
+++ b/app/src/main/res/layout-w600dp/app_bar_main.xml
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/stat_notify_sync" />
+        app:srcCompat="@drawable/estrella"/>
+        <!--app:srcCompat="@android:drawable/stat_notify_sync"-->
 
 </android.support.design.widget.CoordinatorLayout>
