--- a/app/src/main/res/layout-w600dp/content_main.xml
+++ b/app/src/main/res/layout-w600dp/content_main.xml
@@ -8,9 +8,15 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.audiolibros.MainActivity"
     tools:showIn="@layout/activity_main">
-    <fragment
+    <!--<fragment
         android:id="@+id/selector_fragment"
         android:name="com.example.audiolibros.fragments.SelectorFragment"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />-->
+    <LinearLayout
+        android:id="@+id/contenedor_izquierdo"
+        android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
