--- a/app/src/main/res/layout/fragment_detalle.xml
+++ b/app/src/main/res/layout/fragment_detalle.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_detalle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -41,5 +42,21 @@
             android:layout_below="@id/autor"
             android:layout_centerHorizontal="true"
             android:scaleType="fitCenter" />
+
+        <com.example.audiolibros.barra.ZoomSeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/portada"
+            android:padding="20dp"
+            app:altoBar="10dp"
+            app:altoGuia="4dp"
+            app:altoNumeros="15dp"
+            app:altoPalanca="10dp"
+            app:altoRegla="10dp"
+            app:altoTexto="12dp"
+            app:anchoPalanca="10dp" />
     </RelativeLayout>
 </android.support.v4.widget.NestedScrollView>
